public/styles.css
/* ... */
  .repository .label.list .item
  {
    border-bottom: 1px dashed #4c505c;
  }

  .repository.file.list #file-content .code-view .lines-num
  {
    background: #2e323e;
  }

  .repository.file.list #repo-files-table tbody .octicon.octicon-file-directory,
.repository.file.list #repo-files-table tbody .octicon.octicon-file-submodule
  {
    color: #7c9b5e;
  }

  .ui.basic.blue.button,
.ui.basic.blue.buttons .button
  {
    box-shadow: 0 0 0 1px #a27558 inset !important;
    color: #a27558 !important;
  }

  .repository.file.list #file-content .code-view .lines-num pre,
.repository.file.list #file-content .code-view .lines-code pre,
.repository.file.list #file-content .code-view .lines-num ol,
.repository.file.list #file-content .code-view .lines-code ol,
.repository.file.list #file-content .code-view .lines-num .hljs,
.repository.file.list #file-content .code-view .lines-code .hljs
  {
    background-color: #2a2e3a;
  }

  a.ui.label:hover,
a.ui.labels .label:hover
  {
    background-color: #505667;
    color: rgb(219, 219, 219);
  }

  .repository .diff-file-box .code-diff-split tbody tr.add-code td:nth-child(1),
.repository .diff-file-box .code-diff-split tbody tr.add-code td:nth-child(2),
.repository .diff-file-box .code-diff-split tbody tr.del-code td:nth-child(3),
.repository .diff-file-box .code-diff-split tbody tr.del-code td:nth-child(4)
  {
    background-color: #2a2e3a;
  }

  .repository .diff-file-box .code-diff-split tbody tr.add-code td:nth-child(3),
.repository .diff-file-box .code-diff-split tbody tr.add-code td:nth-child(4),
.repository .diff-file-box .code-diff-split tbody tr td.add-code
  {
    background-color: #283e2d !important;
    border-color: #314a37 !important;
  }

  .repository .diff-file-box .code-diff-split tbody tr.del-code td:nth-child(1),
.repository .diff-file-box .code-diff-split tbody tr.del-code td:nth-child(2),
.repository .diff-file-box .code-diff-split tbody tr td.del-code
  {
    background-color: #3c2626 !important;
    border-color: #634343 !important;
  }

  .ui.blue.button:focus,
.ui.blue.buttons .button:focus
  {
    background-color: #a27558;
  }

  .ui.blue.button:active,
.ui.blue.buttons .button:active
  {
    background-color: #a27558;
  }

  #git-graph-container li a
  {
    color: #c79575;
  }

  #git-graph-container li .author
  {
    color: #c79575;
  }

  .ui.header .sub.header
  {
    color: #9e9e9e;
  }

  .ui.dividing.header
  {
    border-bottom: 1px solid #4c505c;
  }

  .ui.modal>.header
  {
    background: #404552;
    color: #dbdbdb;
  }

  .ui.modal>.actions
  {
    background: #404552;
    border-top: 1px solid #404552;
  }

  .ui.modal>.content
  {
    background: #383c4a;
  }

  .ui.basic.blue.button, .ui.basic.blue.buttons .button
  {
    box-shadow: 0 0 0 1px #609926 inset!important;
    color: #609926!important;
  }

